force-app/main/default/objects/API_Insurance_Company_Master_Data__c/API_Insurance_Company_Master_Data__c.object-meta.xml
<CustomObject>
    <label>API Insurance Company Master Data</label>
    <nameField>
        <label>API Insurance Company Master Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Insurance Company Master Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>