force-app/main/default/objects/API_Insurance_Company_Master_Data__c/fields/area_fax__c.field-meta.xml
<CustomField>
    <fullName>area_fax__c</fullName>
    <label>area_fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>