force-app/main/default/objects/API_Insurance_Company_Master_Data__c/fields/area_phone_1__c.field-meta.xml
<CustomField>
    <fullName>area_phone_1__c</fullName>
    <label>area_phone_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>