force-app/main/default/objects/API_Insurance_Company_Master_Data__c/fields/city_id__c.field-meta.xml
<CustomField>
    <fullName>city_id__c</fullName>
    <label>city_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>