force-app/main/default/objects/API_Insurance_Company_Master_Data__c/fields/contact_person_name__c.field-meta.xml
<CustomField>
    <fullName>contact_person_name__c</fullName>
    <label>contact_person_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>