force-app/main/default/objects/API_Insurance_Company_Master_Data__c/fields/days_in_year__c.field-meta.xml
<CustomField>
    <fullName>days_in_year__c</fullName>
    <label>days_in_year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>