force-app/main/default/objects/API_Insurance_Company_Master_Data__c/fields/insurance_company_id__c.field-meta.xml
<CustomField>
    <fullName>insurance_company_id__c</fullName>
    <label>insurance_company_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>