force-app/main/default/objects/API_Insurance_Company_Master_Data__c/fields/insurance_type_name__c.field-meta.xml
<CustomField>
    <fullName>insurance_type_name__c</fullName>
    <label>insurance_type_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>