force-app/main/default/objects/API_Insurance_Company_Master_Data__c/fields/phone_1__c.field-meta.xml
<CustomField>
    <fullName>phone_1__c</fullName>
    <label>phone_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>