force-app/main/default/objects/API_Insurance_Company_Master_Data__c/fields/sub_district_id__c.field-meta.xml
<CustomField>
    <fullName>sub_district_id__c</fullName>
    <label>sub_district_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>